# Junior-Test

./: .gitignore  CMakeLists.txt  README.md
Resources/: Configuration.txt  Input.txt  Launch.bat  Predicates.txt
Source/: ConfigurationDataReader.cpp  ConfigurationDataReader.hpp  InputChunkReader.cpp  InputChunkReader.hpp  InputDataReader.cpp  InputDataReader.hpp  Instruction.cpp  Instruction.hpp  InstructionValidator.cpp  InstructionValidator.hpp  Main.cpp  Message.hpp  PathValidator.cpp  PathValidator.hpp  Predicate.cpp  Predicate.hpp  PredicateEquals.cpp  PredicateEquals.hpp  PredicateFactory.cpp  PredicateFactory.hpp  PredicateLess.cpp  PredicateLess.hpp  PredicateMore.cpp  PredicateMore.hpp  PredicateValidator.cpp  PredicateValidator.hpp  PredicatesHolder.cpp  PredicatesHolder.hpp  Symbol.cpp  Symbol.hpp  SymbolHolder.cpp  SymbolHolder.hpp  SymbolsHolder.cpp  SymbolsHolder.hpp  XMLReader.cpp  XMLReader.hpp
